<resources>
    <string name="app_name">handson3</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="age">Age:</string>

    <string name="sex">Sex:</string>
    <string name="email">email</string>
    <string name="mobile_number">Mobile number</string>
    <string name="preferred_way_of_communication">Preferred way of communication?</string>
    <string name="email1">Email</string>
    <string name="phone">Phone</string>
    <string name="do_you_want_to_save_the_data">Do you want to save the data</string>
    <string name="submit">Submit</string>
    <string name="dob">DOB</string>
    <string name="select_dob">Select DOB</string>
</resources>